# kapply

./: LICENSE.txt  Makefile  README.md  pyproject.toml
src/: kapply.py
src/kapply_core/: deploy.py  manifest.py  namespace.py  release.py  resources.py  revision.py
